--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "test": "jest",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -15,10 +16,12 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.1.0",
+    "jest": "^29.2.1",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
